--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
 Django==3.1.7
+django-celery-beat==2.2.0
+django-cors-headers==3.7.0
+django-filter==2.4.0
+django-model-utils==4.1.1
+django-rest-swagger==2.2.0
+django-ses==2.0.0
+django-timezone-field==4.1.2
+djangorestframework==3.12.4
+httpie==2.4.0
+requests==2.25.1
+
